--- a/includes/assets/css/gallery-view.css
+++ b/includes/assets/css/gallery-view.css
@@ -1,6 +1,18 @@
+.options-container {
+    display: flex;
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    flex-direction: column;
+    justify-content: space-between;
+    gap: .5rem;
+    margin-bottom: 1rem;
+}
+
 .filter-container {
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
     gap: 8px;
 }
 
