--- a/includes/assets/css/gallery-view.css
+++ b/includes/assets/css/gallery-view.css
@@ -10,6 +10,12 @@
     margin-bottom: 1rem;
 }
 
+.stg-table {
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 1rem;
+}
+
 .filter-container {
     display: flex;
     margin-bottom: 1rem;
