--- a/includes/assets/css/gallery-view.css
+++ b/includes/assets/css/gallery-view.css
@@ -11,8 +11,9 @@
 }
 
 .stg-table {
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 5px !important;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
+    border: none !important;
     margin-bottom: 1rem;
 }
 
