--- a/includes/assets/css/gallery-view.css
+++ b/includes/assets/css/gallery-view.css
@@ -15,6 +15,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
     border: none !important;
     margin-bottom: 1rem;
+    overflow: hidden;
 }
 
 .stg-table thead {
