--- a/includes/assets/css/gallery-view.css
+++ b/includes/assets/css/gallery-view.css
@@ -52,9 +52,11 @@
 .btn {
 
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 2px;
     flex-direction: column;
+    height: 35px;
 }
 
 .delete-btn {
